--- a/index.css
+++ b/index.css
@@ -21,8 +21,9 @@ h1{
 
 .Division1{
     background-color: lightcoral; 
-    padding-top: 5px; 
+    /* padding-top: 5px;  */
     padding-left: 500px;
     padding-bottom: 5px; 
     padding-right: 10px;
 }
+
